--- a/web_tp/templates/base.html
+++ b/web_tp/templates/base.html
@@ -27,7 +27,11 @@
 
 	{% include 'footer.html' %}
 
-	<script src="{% static '/js/bootstrap.min.js' %}"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{% static '/js/bootstrap.min.js' %}"></script>
+    <script src="{% static '/js/csrf.js' %}"></script>
+    <script src="{% static '/js/votes.js' %}"></script>
 
 </body>
 </html>
