--- a/web_tp/templates/question_preview.html
+++ b/web_tp/templates/question_preview.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="media-body px-1">
 		<a href="{% url 'question' pk=question.id %}" class="h5 mt-0">{{ question.title }}</a>
-		<p>{{ question.text }}</p>
+		<p>{{ question.question_text }}</p>
 		<div class="row">
             <div class ="text-dark mr-1">
                 tags:
